code/dotnet/FactSetConcordance/v2/docs/EntityTaskStatus.md
# FactSet.SDK.FactSetConcordance.Model.EntityTaskStatus
Concordance Entity Task Status object. Shows the settings and status of a taskId and some statistics on the matches. 

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**TaskId** | **int?** | Identifier denoting a specific Concordance task submitted by the user. | [optional] 
**TaskName** | **string** | User-defined name for the task used to name the output file. | [optional] 
**TaskAction** | **string** | Action status for the Concordance Task process. | [optional] 
**Status** | **string** | Status of the Concordance Task. If the value is \&quot;SUCCESS\&quot;, you can move to the subsequent /entity-decisions endpoint to retrieve the results. | [optional] 
**InputFile** | **string** | The input file is posted as a file object in the form.  | [optional] 
**ClientIdColumn** | **string** | Name of the column in the input file that contains a unique identifier supplied by the user. | [optional] 
**PriorityColumn** | **string** | Header Name of the column in the inputfile that contains the priority for the client id  | [optional] 
**BbgFigiColumn** | **string** | Header Name of the column in the input file for the type Bloomberg Listing/Regional/Security ID. | [optional] 
**BbgTickerColumn** | **string** | Header Name of the column in the input file for the type Bloomberg Listing and Regional Ticker. | [optional] 
**BicColumn** | **string** | Header Name of the column in the input file for the type BICCode, bank indentification code. | [optional] 
**CikColumn** | **string** | Header Name of the column in the input file for the type CIK, Edgar Central Index Keys. | [optional] 
**CrdColumn** | **string** | Header Name of the column in the input file for the type CRD, Central Registration Depository. | [optional] 
**CreditsafeColumn** | **string** | the column name for type Creditsafe Identifier | [optional] 
**CrunchbaseColumn** | **string** | the column name for type Crunchbase Identifier | [optional] 
**CusipColumn** | **string** | Header Name of the column in the input file for the type CUSIP. | [optional] 
**EinColumn** | **string** | Header Name of the column in the input file for the type EmployerIdentificationNumber, EIN. | [optional] 
**FactsetIdColumn** | **string** | Header Name of the column in the input file for the type FactSet Identifier - &#x60;FactSet -E,-S,-R, -L Permanent Identifier. | [optional] 
**FitchColumn** | **string** | Header Name of the column in the input file for the type FitchCreditRating, Fitch Ratings Identifier. | [optional] 
**GvkeyColumn** | **string** | Header Name of the column in the input file for the type GVKEY - Compustat Global Company Key. | [optional] 
**GvkeyIidColumn** | **string** | Header Name of the column in the input file for the type GVKEY+IID - Compustat Global Company Key and Issue Identifier. | [optional] 
**IsinColumn** | **string** | Header Name of the column in the input file for the type ISIN. | [optional] 
**JcnColumn** | **string** | Header Name of the column in the input file for the type JCN - Japanese Corporate Number. | [optional] 
**LeiColumn** | **string** | Header Name of the column in the input file for the type LegalEntityIdentifier, LEI. | [optional] 
**LxidColumn** | **string** | Header Name of the column in the input file for the type LXID - Markit Syndicated Loan Identifier. | [optional] 
**MdColumn** | **string** | Header Name of the column in the input file for the type MoodysIssuer, Moody&#39;s Ratings Identifier. | [optional] 
**RedCodeColumn** | **string** | Header Name of the column in the input file for the type Red Code - Markit Reference Entity Identifier. | [optional] 
**RssdColumn** | **string** | Header Name of the column in the input file for the type FederalReserveRSSDIdentifier, RSSD. | [optional] 
**SedolColumn** | **string** | Header Name of the column in the input file for the type SEDOL. | [optional] 
**SprColumn** | **string** | Header Name of the column in the input file for the type S&amp;PRating, S&amp;P Ratings Identifier | [optional] 
**TickerColumn** | **string** | Header Name of the column in the input file for the type PriceTicker. | [optional] 
**TickerExchangeColumn** | **string** | Header Name of the column in the input file for the type TickerExch. | [optional] 
**TickerRegionColumn** | **string** | Header Name of the column in the input file for the type TickerRegion. | [optional] 
**UkchColumn** | **string** | Header Name of the column in the input file for the type UKCompanyHouse. | [optional] 
**ValorenColumn** | **string** | Header Name of the column in the input file for the type VALOR, Valoren (\&quot;Valor\&quot;) Identification. | [optional] 
**WknColumn** | **string** | Header Name of the column in the input file for the type WKN, German Securities Identification. | [optional] 
**NameColumn** | **string** | Name of the column in the input file that contains the entity name to be matched. | [optional] 
**CountryColumn** | **string** | Name of the column in the input file that contains the ISO2 country code corresponding to the entity name.  The country code is used when evaluating candidates for a match.  | [optional] 
**StateColumn** | **string** | Name of the column in the input file that contains the Two-character state code corresponding to the entity name. The state code is used when evaluating candidates for a match.  | [optional] 
**UrlColumn** | **string** | Name of the column in the input file that contains the URL corresponding to the entity name. The URL is used when evaluating candidates for a match.  | [optional] 
**AdditionalContextColumns** | **List&lt;string&gt;** | Comma separated list of any additional column names in the input file.  To be used by Managed Service for any unmapped records.  | [optional] 
**HasResult** | **bool?** | Flag denoting the taskId has a result. | [optional] 
**TaskSubmitTime** | **DateTime?** | Time the Task was submitted in UTC. | [optional] 
**Message** | **string** | Textual message for the status. | [optional] 
**InputCount** | **int?** | Number of records in the Input File. | [optional] 
**MappedCount** | **int?** | Number of records with status of MAPPED the Input File. | [optional] 
**UnmappedCount** | **int?** | Number of records with status of UNMAPPED the Input File. | [optional] 
**IndeterminateCount** | **int?** | Number of records with status of INDETERMINATE the Input File. | [optional] 
**ProcessStartTime** | **DateTime?** | Process start time in UTC. | [optional] 
**ProcessDuration** | **double?** | Process duration in seconds. | [optional] 
**TryCount** | **int?** | Number of tries made so far for the request. | [optional] 
**DecisionRate** | **double?** | Percentage of mapped entities in the Input File. | [optional] 
**Error** | **string** |  | [optional] 
**ErrorTitle** | **string** |  | [optional] 
**IncludeEntityType** | **List&lt;string&gt;** | Requested Entity types to include.  | [optional] 
**ExcludeEntityType** | **List&lt;string&gt;** | Requested Entity types to exclude.  | [optional] 
**IncludeEntitySubType** | **List&lt;string&gt;** | Requested Entity subtypes to include.  | [optional] 
**ExcludeEntitySubType** | **List&lt;string&gt;** | Requested Entity subtypes to exclude.  | [optional] 
**UserSerial** | **string** | user-serial of the person who initiated the entity task. | [optional] 
**UserFullName** | **string** | Full name of the person associated with the &#x60;userSerial&#x60;.  | [optional] 
**UniverseId** | **int?** | The universe id this task was submitted to.  | [optional] 
**UniverseName** | **string** | The name of the universe this task was submitted to.  | [optional] 
**AutoRemap** | **bool** | When &#x60;true&#x60;, automatically re-evaluates and overwrites existing mappings using updated metadata submitted in this task. Applicable when the specified universe has auto-remap set to true. **Caution: Mapping updates cannot be undone.**  | [optional] 

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)

